welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: reassignment to val
  if (tea=2*candy || candy==2*tea){
         ^